fix: adjust tooltip z-index to prevent overlap

--- a/packages/ui/src/assets/scss/style.scss
+++ b/packages/ui/src/assets/scss/style.scss
@@ -146,3 +146,7 @@ video {
 img[alt='agentPNG'] {
   height: 25px !important;
 }
+
+.MuiTooltip-popper.fixzindex {
+  z-index: 999 !important;
+}
